force-app/main/default/objects/sma__MATerritory__c/sma__MATerritory__c.object-meta.xml
<CustomObject>
    <label>MapAnything Territory</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>