force-app/main/default/objects/sma__MATerritory__c/fields/sma__Description__c.field-meta.xml
<CustomField>
    <fullName>sma__Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>