force-app/main/default/objects/sma__MATerritory__c/fields/sma__Folder__c.field-meta.xml
<CustomField>
    <fullName>sma__Folder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Folder</label>
    <referenceTo>sma__MAFolder__c</referenceTo>
    <relationshipLabel>MapAnything Territories</relationshipLabel>
    <relationshipName>MapAnythingTerritories</relationshipName>
    <type>Lookup</type>
</CustomField>