force-app/main/default/objects/sma__MATerritory__c/fields/sma__Territory__c.field-meta.xml
<CustomField>
    <fullName>sma__Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Territory</label>
    <referenceTo>sma__MATerritory__c</referenceTo>
    <relationshipLabel>Territories</relationshipLabel>
    <relationshipName>Territories</relationshipName>
    <type>Lookup</type>
</CustomField>